--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manuel Muñoz Ibarra - Analista de Datos</title>
+    <title>Hilda Vera Flores - Analista de Datos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -408,8 +408,8 @@
         <div class="container">
             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Manuel Muñoz Ibarra" class="profile-img">
             <div class="header-content">
-                <h1>Manuel Muñoz Ibarra</h1>
-                <p>Analista de Datos | Visualización | Machine Learning</p>
+                <h1>Hilda Vera Flores</h1>
+                <p>Analista de Datos | Visualización | Marketing Digital</p>
             </div>
         </div>
     </header>
@@ -432,9 +432,10 @@
             <h2 class="section-title">Sobre Mí</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Soy Manuel Muñoz Ibarra, analista de datos con experiencia en transformar datos complejos en insights accionables. Mi pasión es descubrir patrones ocultos en los datos y comunicar hallazgos de manera clara y efectiva.</p>
-                    <p>Cuento con experiencia en herramientas como Python, R, SQL y Tableau, así como en técnicas de machine learning y estadística. Mi objetivo es ayudar a las organizaciones a tomar decisiones basadas en datos.</p>
-                    <p>Cuando no estoy analizando datos, me gusta aprender sobre nuevas tecnologías, leer y participar en proyectos de ciencia ciudadana.</p>
+                    <p>Soy Hilda Vera, licenciada en negocios internacionales e ingeniera comercial, iniciando como analista de datos, apasionada por los datos y el marketing digital</p>
+                    <p>poseo experiencia transformando datos en insights atractivos para descubrir patrones, tendencias y comportamientos de los clientes que ocultan los datos.</p>
+                    <p>Cuento con experiencia en herramientas como Python, SQL, Power BI, plataformas de E-commerce como Wordpress y de marketing digital como Doppler y Brevo.</p>
+                    <p>Mi objetivo es apoyar a las empresas y organizaciones a tomar decisiones basadas en datos, así como buscar explicaciones en el comportamiendo de los datos.</p>
                 </div>
             </div>
         </div>
@@ -453,17 +454,17 @@
                 <div class="skill-card">
                     <i class="fas fa-chart-line"></i>
                     <h3>Visualización</h3>
-                    <p>Creación de dashboards y visualizaciones con Tableau, Power BI y librerías de Python.</p>
+                    <p>Creación de dashboards y visualizaciones con Power BI y librerías de Python.</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-brain"></i>
-                    <h3>Machine Learning</h3>
-                    <p>Desarrollo de modelos predictivos con scikit-learn, TensorFlow y Keras.</p>
+                    <h3>Marketing Digital</h3>
+                    <p>Seguimiento, conversión y optimización BBDD</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-code"></i>
                     <h3>Programación</h3>
-                    <p>Python, R, SQL, JavaScript y experiencia con Git para control de versiones.</p>
+                    <p>Python, SQL y experiencia con Git para control de versiones.</p>
                 </div>
             </div>
         </div>
@@ -535,9 +536,9 @@
                 <div class="contact-info">
                     <h3>¡Hablemos!</h3>
                     <div class="contact-details">
-                        <p><i class="fas fa-envelope"></i> manuel.munoz.ibarra@example.com</p>
-                        <p><i class="fas fa-phone"></i> +34 612 345 678</p>
-                        <p><i class="fas fa-map-marker-alt"></i> Madrid, España</p>
+                        <p><i class="fas fa-envelope"></i> hvera@myempresa.com</p>
+                        <p><i class="fas fa-phone"></i> +56 922 345 678</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Viña del Mar, Chile</p>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -571,7 +572,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2023 Manuel Muñoz Ibarra - Analista de Datos</p>
+            <p>&copy; 2023 Hilda Vera Flores - Analista de Datos</p>
         </div>
     </footer>
 
